KCM Icons: correctly highlight themes installed from Discover

BUG: 415129

Test Plan: Try installing using plasma-changeicons executable (used by discover) and from discover directly

Reviewers: #plasma, ngraham, apol

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26142